syntax = "proto3";

package NetProto;

message NetLogin{
	string account = 1;
	int32 platform = 2;
	string token = 3;
	int32 serverid = 4;
}

message NetCreateRole{
	string name = 1;
}